# SimplerThanWaldo

./: .gitignore  CMakeLists.txt  Not_at_all_strict_style_guide.txt  README.md  Testbench.cpp
Headers/: MotionParser.h  NN3D.h  Pose.h  Pose_2D.h  kd_tree.h  timer.h
SimplerThanWaldo/: CMakeLists.txt
SimplerThanWaldo/Headers/: MotionParser.h  NN3D.h  Pose.h  Pose_2D.h  Render.h  kd_tree.h  timer.h
SimplerThanWaldo/Sources/: MotionParser.cpp  NN3D.cpp  Pose.cpp  Render.cpp  Testbench.cpp  kd_tree.cpp  timer.cpp
Sources/: DisplayImage.cpp  MotionParser.cpp  NN3D.cpp  Pose.cpp  kd_tree.cpp  main.cpp  timer.cpp
csvpose_mini/01/: 01_01.csv  01_08.csv  01_10.csv  01_13.csv  01_14.csv
csvpose_mini/02/: 02_01.csv  02_02.csv  02_03.csv  02_04.csv  02_05.csv  02_06.csv  02_07.csv  02_08.csv  02_09.csv  02_10.csv
csvpose_mini/03/: 03_01.csv  03_02.csv
csvpose_mini/105/: 105_01.csv  105_02.csv  105_04.csv  105_06.csv  105_08.csv  105_10.csv  105_11.csv  105_12.csv  105_14.csv  105_15.csv  105_16.csv  105_17.csv  105_19.csv  105_20.csv  105_23.csv  105_25.csv  105_30.csv  105_31.csv  105_32.csv  105_33.csv  105_34.csv  105_37.csv  105_40.csv  105_44.csv  105_45.csv  105_46.csv  105_50.csv  105_53.csv  105_54.csv  105_59.csv  105_62.csv
csvpose_mini/91/: 91_03.csv  91_05.csv  91_07.csv  91_13.csv  91_18.csv  91_21.csv  91_22.csv  91_24.csv  91_26.csv  91_27.csv  91_28.csv  91_29.csv  91_35.csv  91_36.csv  91_38.csv  91_39.csv  91_41.csv  91_42.csv  91_43.csv  91_47.csv  91_48.csv  91_49.csv  91_51.csv  91_52.csv  91_55.csv  91_56.csv  91_57.csv  91_58.csv  91_60.csv  91_61.csv
